Change queried collection to allow null value